--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=brianllamar">brianllamar</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528393615"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    57 points
+                                    58 points
                                 </span>
                             </td>
                         </tr>
@@ -365,7 +365,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17252311">
                                         
-                                            219 comments
+                                            221 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=timmytokyo">timmytokyo</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528385586"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    59 points
+                                    61 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reddit.com/r/AMA/comments/8pc8mf/im_nat_friedman_future_ceo_of_github_ama/e0a235q/">Future of GitHub's Atom Editor</a>
+                                    <a href="https://blog.coinbase.com/our-path-to-listing-sec-regulated-crypto-securities-a1724e13bb5a">Our path to listing SEC-regulated crypto securities</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17258419">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17252322">
                                         
-                                            12 comments
+                                            140 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=thangngoc89">thangngoc89</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528394326"
+                                            href="https://news.ycombinator.com/user?id=troydavis">troydavis</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528331535"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    33 points
+                                    151 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528411804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528412405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
