--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.google/topics/ai/ai-principles/">AI at Google: our principles</a>
+                                    <a href="https://www.reuters.com/article/us-facebook-privacy-congress/facebook-confirms-data-sharing-with-chinese-companies-idUSKCN1J11TY">Facebook confirms data sharing with Chinese companies</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17259082">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17246437">
                                         
-                                            224 comments
+                                            82 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dannyrosen">dannyrosen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528398267"
+                                            href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528287882"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    296 points
+                                    298 points
                                 </span>
                             </td>
                         </tr>
@@ -341,7 +341,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17258114">
                                         
-                                            161 comments
+                                            162 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=hamza99">hamza99</a></strong> &nbsp;•&nbsp;
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528412405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528413004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
