--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528192020"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    390 points
+                                    391 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://arxiv.org/abs/1002.2284">Markets are efficient if and only if P = NP (2010)</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-06-06/github-is-microsoft-s-7-5-billion-undo-button">GitHub Is Microsoft’s $7.5B Undo Button</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17202950">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17250963">
                                         
-                                            190 comments
+                                            342 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=perculis">perculis</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527833099"
+                                            href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528317973"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     332 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528413603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528414203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
