--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-06-06/github-is-microsoft-s-7-5-billion-undo-button">GitHub Is Microsoft’s $7.5B Undo Button</a>
+                                    <a href="https://blog.google/topics/ai/ai-principles/">AI at Google: our principles</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17250963">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17259082">
                                         
-                                            342 comments
+                                            249 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528317973"
+                                            href="https://news.ycombinator.com/user?id=dannyrosen">dannyrosen</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528398267"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    332 points
+                                    333 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528415405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528416003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
