--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -99,6 +99,20 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17255418" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="https://github.com/jonpe960/ufsm/tree/ufsm-0.1.0">µFSM – A state chart library for embedded applications</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17242528" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="http://lodev.org/logicemu">LogicEmu – Online Logic Simulator</a>
@@ -130,20 +144,6 @@
                                     <a href="https://news.ycombinator.com/item?id=17242136" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://www.feram.io/blog/2018-06-05_transity_the_future_of_plain_text_accounting/">Transity – Plain Text Accounting</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17242485" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/joowani/binarytree">Python library for learning binarytrees</a>
                                 </span>
                             </td>
                         </tr>
@@ -420,7 +420,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528416605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528417204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
