--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.nasa.gov/press-release/nasa-finds-ancient-organic-material-mysterious-methane-on-mars">NASA Finds Ancient Organic Material, Mysterious Methane on Mars</a>
+                                    <a href="https://discourse.drone.io/t/shutting-down-forum-gdpr/2297/13">Shutting Down Forum (GDPR)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17258492">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17208065">
                                         
-                                            85 comments
+                                            506 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=AstralWalker">AstralWalker</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528394827"
+                                            href="https://news.ycombinator.com/user?id=spacebearmakes">spacebearmakes</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527875660"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    257 points
+                                    258 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://nautil.us/issue/60/searches/does-theranos-mark-the-peak-of-the-silicon-valley-bubble">We Shouldn’t Be Surprised at the Theranos Fraud</a>
+                                    <a href="https://open.nytimes.com/how-the-new-york-times-uses-software-to-recognize-members-of-congress-29b46dd426c7">How The New York Times Uses Software to Recognize Members of Congress</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17252311">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17257610">
                                         
-                                            228 comments
+                                            106 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528331391"
+                                            href="https://news.ycombinator.com/user?id=beriboy">beriboy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528390119"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     232 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528422604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528423204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
