--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://open.nytimes.com/how-the-new-york-times-uses-software-to-recognize-members-of-congress-29b46dd426c7">How The New York Times Uses Software to Recognize Members of Congress</a>
+                                    <a href="http://nautil.us/issue/60/searches/does-theranos-mark-the-peak-of-the-silicon-valley-bubble">We Shouldn’t Be Surprised at the Theranos Fraud</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17257610">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17252311">
                                         
-                                            105 comments
+                                            228 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=beriboy">beriboy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528390119"
+                                            href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528331391"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    231 points
+                                    232 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528422604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528423204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
