--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reddit.com/r/AMA/comments/8pc8mf/im_nat_friedman_future_ceo_of_github_ama/">I’m Nat Friedman, Future CEO of GitHub. AMA</a>
+                                    <a href="http://beta.latimes.com/local/education/la-me-caltech-glassblower-20160613-snap-story.html">Caltech glassblower's retirement has scientists sighing (2016)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17258114">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17240776">
                                         
-                                            183 comments
+                                            214 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=hamza99">hamza99</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528392786"
+                                            href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528224336"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    298 points
+                                    299 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528428603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528429203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
