--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -407,6 +407,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://haiku-os.tumblr.com/post/174629492437/libreoffice-620-was-ported-to-haiku-its">LibreOffice 6.2.0 was ported to Haiku</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17254713">
+                                        
+                                            2 comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=buovjaga">buovjaga</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528368182"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    5 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="http://prog21.dadgum.com/159.html">The Unix Philosophy and a Fear of Pixels</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -468,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528430404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528431005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
