--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.nature.com/articles/d41586-018-05357-w">Sucking carbon dioxide from air is cheaper than scientists thought</a>
+                                    <a href="http://nautil.us/issue/60/searches/does-theranos-mark-the-peak-of-the-silicon-valley-bubble">We Shouldn’t Be Surprised at the Theranos Fraud</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17260500">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17252311">
                                         
-                                            166 comments
+                                            229 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=kjeetgill">kjeetgill</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528407338"
+                                            href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528331391"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    231 points
+                                    232 points
                                 </span>
                             </td>
                         </tr>
@@ -437,7 +437,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17254113">
                                         
-                                            154 comments
+                                            155 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=placatedmayhem">placatedmayhem</a></strong> &nbsp;•&nbsp;
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528431005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528431604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
