--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=johnny313">johnny313</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528390715"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    149 points
+                                    150 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://fermatslibrary.com/s/the-beginning-of-the-monte-carlo-method">The Beginning of the Monte Carlo Method (1987)</a>
+                                    <a href="https://www.theguardian.com/technology/2018/jun/05/facial-recognition-us-mexico-border-crossing">US government to use facial recognition technology at Mexico border crossing</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17239599">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17255785">
                                         
-                                            31 comments
+                                            94 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mgdo">mgdo</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528217779"
+                                            href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528380028"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    122 points
+                                    123 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528432203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528432804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
