--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -407,19 +407,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://torrentfreak.com/ipvanish-no-logging-vpn-led-homeland-security-to-comcast-user-180505/">IPVanish “No-Logging” VPN Led Homeland Security to Comcast User</a>
+                                    <a href="https://lkml.org/lkml/2018/6/5/769">Torvalds: Standards need to be questioned</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17254113">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17242103">
                                         
-                                            159 comments
+                                            169 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=placatedmayhem">placatedmayhem</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528358770"
+                                            href="https://news.ycombinator.com/user?id=l1k">l1k</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528233068"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    217 points
+                                    218 points
                                 </span>
                             </td>
                         </tr>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.bbc.co.uk/news/resources/idt-sh/faroe_islands_postal_service">Tales from the far-flung Faroes</a>
+                                    <a href="https://torrentfreak.com/ipvanish-no-logging-vpn-led-homeland-security-to-comcast-user-180505/">IPVanish “No-Logging” VPN Led Homeland Security to Comcast User</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17212917">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17254113">
                                         
-                                            76 comments
+                                            159 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=sjcsjc">sjcsjc</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527917872"
+                                            href="https://news.ycombinator.com/user?id=placatedmayhem">placatedmayhem</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528358770"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     217 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528434604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528435204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
