--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -491,7 +491,7 @@
                                             href="https://news.ycombinator.com/user?id=AstralWalker">AstralWalker</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528394827"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    282 points
+                                    284 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://open.nytimes.com/how-the-new-york-times-uses-software-to-recognize-members-of-congress-29b46dd426c7">How The New York Times Uses Software to Recognize Members of Congress</a>
+                                    <a href="https://www.nature.com/articles/d41586-018-05357-w">Sucking carbon dioxide from air is cheaper than scientists thought</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17257610">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17260500">
                                         
-                                            109 comments
+                                            177 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=beriboy">beriboy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528390119"
+                                            href="https://news.ycombinator.com/user?id=kjeetgill">kjeetgill</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528407338"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    257 points
+                                    260 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528435204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528435805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
