--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.newyorker.com/books/under-review/the-bullshit-job-boom">For more and more people, work appears to serve no purpose</a>
+                                    <a href="https://blog.coinbase.com/our-path-to-listing-sec-regulated-crypto-securities-a1724e13bb5a">Our path to listing SEC-regulated crypto securities</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17260911">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17252322">
                                         
-                                            145 comments
+                                            142 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=wyclif">wyclif</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528410572"
+                                            href="https://news.ycombinator.com/user?id=troydavis">troydavis</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528331535"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    151 points
+                                    152 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528438805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528439404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
