--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -341,13 +341,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17256394">
                                         
-                                            216 comments
+                                            218 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=AndyKelley">AndyKelley</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528384048"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    367 points
+                                    368 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.anandtech.com/show/12906/amd-reveals-threadripper-2-up-to-32-cores-250w-x399-refresh">AMD Reveals Threadripper 2: Up to 32 Cores, 250W, X399 Refresh</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-06-06/github-is-microsoft-s-7-5-billion-undo-button">GitHub Is Microsoft’s $7.5B Undo Button</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17244089">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17250963">
                                         
-                                            206 comments
+                                            345 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=gnufied">gnufied</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528254757"
+                                            href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528317973"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     336 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528438805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528439404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
