--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theguardian.com/technology/2018/jun/05/facial-recognition-us-mexico-border-crossing">US government to use facial recognition technology at Mexico border crossing</a>
+                                    <a href="https://sparktoro.com/blog/raised-a-very-unusual-round-of-funding-were-open-sourcing-our-docs/">Raising a Very Unusual Round of Funding and Open-Sourcing Our Docs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17255785">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17256923">
                                         
-                                            94 comments
+                                            30 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528380028"
+                                            href="https://news.ycombinator.com/user?id=rchaudhary">rchaudhary</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528386584"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     123 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528439404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528440004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
