--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.newyorker.com/books/under-review/the-bullshit-job-boom">For more and more people, work appears to serve no purpose</a>
+                                    <a href="https://www.boxfactura.com/pulltorefresh.js/">Pull to Refresh.js</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17260911">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17256443">
                                         
-                                            168 comments
+                                            68 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=wyclif">wyclif</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528410572"
+                                            href="https://news.ycombinator.com/user?id=evo_9">evo_9</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528384308"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    175 points
+                                    177 points
                                 </span>
                             </td>
                         </tr>
@@ -461,7 +461,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17257725">
                                         
-                                            160 comments
+                                            161 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=johnny313">johnny313</a></strong> &nbsp;•&nbsp;
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528441803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528442404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
