--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -221,13 +221,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17261572">
                                         
-                                            16 comments
+                                            17 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=doppp">doppp</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528417708"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    105 points
+                                    107 points
                                 </span>
                             </td>
                         </tr>
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=e_ameisen">e_ameisen</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528387842"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    198 points
+                                    199 points
                                 </span>
                             </td>
                         </tr>
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=johnny313">johnny313</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528390715"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    163 points
+                                    164 points
                                 </span>
                             </td>
                         </tr>
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=kevin_bloch">kevin_bloch</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528377578"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    190 points
+                                    191 points
                                 </span>
                             </td>
                         </tr>
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=sarif">sarif</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528405228"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    110 points
+                                    111 points
                                 </span>
                             </td>
                         </tr>
@@ -467,7 +467,7 @@
                                             href="https://news.ycombinator.com/user?id=henridf">henridf</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528400466"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    107 points
+                                    108 points
                                 </span>
                             </td>
                         </tr>
@@ -491,7 +491,7 @@
                                             href="https://news.ycombinator.com/user?id=rchaudhary">rchaudhary</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528386584"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    129 points
+                                    130 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.independent.co.uk/life-style/gadgets-and-tech/news/steam-store-vr-porn-virtual-reality-valve-video-games-a8387331.html">Steam store to sell VR porn video games</a>
+                                    <a href="https://www.wsj.com/articles/a-costly-deadly-obsession-with-coal-1528282800">A Costly, Deadly Obsession with Coal</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17261400">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17259594">
                                         
-                                            85 comments
+                                            99 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528415575"
+                                            href="https://news.ycombinator.com/user?id=JumpCrisscross">JumpCrisscross</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528401170"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    63 points
+                                    93 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528445405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528446004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
