--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reddit.com/r/AMA/comments/8pc8mf/im_nat_friedman_future_ceo_of_github_ama/e0a235q/">Future of GitHub's Atom Editor</a>
+                                    <a href="https://uphack.co/">Uphack – decentralized Hacker News</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17258419">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17263413">
                                         
-                                            13 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=thangngoc89">thangngoc89</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528394326"
+                                            href="https://news.ycombinator.com/user?id=Liriel">Liriel</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528443695"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    34 points
+                                    5 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528452004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528452605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
