--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=johnny313">johnny313</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528390715"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    167 points
+                                    168 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/view/articles/2018-06-07/america-s-startup-scene-is-looking-anemic">America's Startup Scene Is Looking Anemic</a>
+                                    <a href="https://github.com/higgsfield/RL-Adventure-2">Reinforcement Learning: From Zero to State of the Art with Pytorch 4</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17255569">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17261063">
                                         
-                                            240 comments
+                                            11 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528378227"
+                                            href="https://news.ycombinator.com/user?id=codentropy">codentropy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528411873"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     146 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528452004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528452605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
