--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -317,13 +317,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17257610">
                                         
-                                            118 comments
+                                            119 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=beriboy">beriboy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528390119"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    284 points
+                                    285 points
                                 </span>
                             </td>
                         </tr>
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=MBCook">MBCook</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528421637"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    258 points
+                                    259 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://akr.am/blog/posts/gitlab-isnt-really-open-source">GitLab Isn’t Really Open-Source</a>
+                                    <a href="https://www.newyorker.com/books/under-review/the-bullshit-job-boom">For more and more people, work appears to serve no purpose</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17229940">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17260911">
                                         
-                                            152 comments
+                                            244 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=thefilmore">thefilmore</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528132632"
+                                            href="https://news.ycombinator.com/user?id=wyclif">wyclif</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528410572"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    258 points
+                                    259 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528453804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528454404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
