--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -407,17 +407,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.jetbrains.com/research/devecosystem-2018/">The State of Developer Ecosystem in 2018</a>
+                                    <a href="https://blog.github.com/2018-06-07-what-laser-cutting-taught-me-about-contribution-graphs/">Life as a GitHub Intern: What laser cutting taught me about contribution graphs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17257180">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17258275">
                                         
-                                            54 comments
+                                            33 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=barrongineer">barrongineer</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528388025"
+                                            href="https://news.ycombinator.com/user?id=brianllamar">brianllamar</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528393615"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     116 points
                                 </span>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.techempower.com/benchmarks/#section=data-r16">Web Framework Benchmarks</a>
+                                    <a href="https://www.jetbrains.com/research/devecosystem-2018/">The State of Developer Ecosystem in 2018</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17254152">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17257180">
                                         
-                                            111 comments
+                                            54 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ksec">ksec</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528359227"
+                                            href="https://news.ycombinator.com/user?id=barrongineer">barrongineer</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528388025"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     116 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528459804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528460406" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
